--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "expiry-map": "^2.0.0",
+    "false": "^0.0.4",
     "fathom-client": "^3.4.1",
     "got": "^12.0.3",
     "isomorphic-unfetch": "^3.1.0",
@@ -51,7 +52,8 @@
     "react-notion-x": "^6.12.7",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.0",
